test/golden/-8868932879679082057.golden

INITIALPATH:7:22: error:
    • No instance for (Integral Float) arising from a use of ‘PyF.Internal.QQ.formatAnyIntegral’
    • In the first argument of ‘putStrLn’, namely ‘(((((PyF.Internal.QQ.formatAnyIntegral PyF.Formatters.Hexa) PyF.Formatters.Minus) Nothing) Nothing) number)’
      In the expression: putStrLn (((((PyF.Internal.QQ.formatAnyIntegral PyF.Formatters.Hexa) PyF.Formatters.Minus) Nothing) Nothing) number)
      In an equation for ‘main’: main = putStrLn (((((PyF.Internal.QQ.formatAnyIntegral PyF.Formatters.Hexa) PyF.Formatters.Minus) Nothing) Nothing) number)
  |
7 | main = putStrLn [fmt|{number:x}|]
  |                      ^^^^^^^^^^^^
